--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cloudio/websocket"]
 	path = cloudio/websocket
 	url = https://github.com/Matazure/websocket-cpp.git
+[submodule "cloudio/json11"]
+	path = cloudio/json11
+	url = https://github.com/dropbox/json11.git
